<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.example.drawingapp.DrawingView
        android:id="@+id/drawingView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/toolsConstraintL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/colorsConstraintL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/drawingView"
        app:layout_constraintBottom_toTopOf="@+id/toolsConstraintL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        >

        <ImageButton
            android:id="@+id/purpleBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/purple_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/orangeBtn"
            android:contentDescription="@string/purple_button"
            />

        <ImageButton
            android:id="@+id/orangeBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/orange_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/purpleBtn"
            app:layout_constraintEnd_toStartOf="@+id/blueBtn"
            android:contentDescription="@string/orange_button"
            />

        <ImageButton
            android:id="@+id/blueBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/blue_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/orangeBtn"
            app:layout_constraintEnd_toStartOf="@+id/greenBtn"
            android:contentDescription="@string/blue_button"
            />

        <ImageButton
            android:id="@+id/greenBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/green_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/blueBtn"
            app:layout_constraintEnd_toStartOf="@+id/redBtn"
            android:contentDescription="@string/purple_button"
            />

        <ImageButton
            android:id="@+id/redBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/red_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/greenBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/purple_button"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolsConstraintL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorsConstraintL"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/brushSizeBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/brush_size_button"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/brush_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
           />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/saveBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/save_button"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/save"
            app:layout_constraintStart_toEndOf="@+id/brushSizeBtn"
            app:layout_constraintEnd_toStartOf="@+id/galleryBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/galleryBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/gallery_button"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/gallery"
            app:layout_constraintStart_toEndOf="@+id/saveBtn"
            app:layout_constraintEnd_toStartOf="@+id/colorPickerBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/colorPickerBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/color_picker"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/color_picker"
            app:layout_constraintStart_toEndOf="@+id/galleryBtn"
            app:layout_constraintEnd_toStartOf="@+id/undoBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/undoBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/brush_size_button"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/brush_icon"
            app:layout_constraintStart_toEndOf="@+id/colorPickerBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>